fix number to 27 and back ground

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ justify-content: center;
 /*background: linear-gradient(to right, #FDFBFB, #EBEDEE 70%);*/
 }
 .wraper{
-  background:url("https://cdn.iom.vn/uploads/20191115095302/vib-led-bg2.png") no-repeat;
+  background:url("anh.jpg") no-repeat;
   background-position: center;
   /*background-size: contain;*/
   background-size: 100% 100%;
